fix layout shift when navigating home

--- a/src/components/Hero/Block/heroBlock.module.css
+++ b/src/components/Hero/Block/heroBlock.module.css
@@ -51,3 +51,13 @@
   animation-fill-mode: forwards;
   opacity: 0;
 }
+
+.floating {
+  position: absolute;
+  width: 100%;
+}
+
+.gap {
+  padding-top: 20rem;
+  pointer-events: none;
+}
